--- a/src/components/Game/Game.module.css
+++ b/src/components/Game/Game.module.css
@@ -1,3 +1,58 @@
 .blackjack_game {
-  background-color: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  overflow: auto;
 }
+
+.container {
+  /* background-color: blue; */
+  margin: 10px auto;
+  padding: 10px;
+  width: 90%;
+}
+
+.cards_wrapper {
+  padding: 20px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+
+
+.score {
+  display: inline-block;
+  width: 60px;
+  line-height: 60px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 2rem;
+  margin: 10px;
+  background-color: #adb5bd;
+}
+
+
+.buttons_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+
+
+
+
+
+.hide {
+  display: none;
+}
+
+
