--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
+
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Rubik", sans-serif;
 
 }
 
 body {
   background-color: green;
+  text-align: center;
+
 }
