--- a/src/components/Game/Game.module.css
+++ b/src/components/Game/Game.module.css
@@ -3,8 +3,10 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  
   height: 100%;
   overflow: auto;
+  margin-top: 20px;
 }
 
 .container {
@@ -15,7 +17,7 @@
 }
 
 .cards_wrapper {
-  padding: 20px 0;
+  padding: 10px 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
