--- a/src/components/Modal/DealRulesModal.module.css
+++ b/src/components/Modal/DealRulesModal.module.css
@@ -14,7 +14,13 @@
 
 .rules_container {
   font-size: 12px;
+}
 
+.start_game_button {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @media screen and (min-width: 1200px) {
