--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -4,4 +4,19 @@
   border: none;
   border-radius: 10px;
   cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+/* .button:hover {
+  transform: scale(1.05);
+} */
+
+.button:active {
+  transform: scale(0.95);
+}
+
+
+
+.icon {
+  margin-right: 5px;
 }
