--- a/src/components/Game/Game.module.css
+++ b/src/components/Game/Game.module.css
@@ -3,10 +3,13 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  
   height: 100%;
   overflow: auto;
   margin-top: 20px;
+}
+
+.both_sides_container {
+  width: 100%;
 }
 
 .container {
@@ -35,8 +38,11 @@
   border-radius: 50%;
   text-align: center;
   font-size: 2rem;
+  font-weight: 500;
   margin: 10px;
   background-color: #adb5bd;
+  /* background-color: #3686d5; */
+
 }
 
 
@@ -49,12 +55,47 @@
 }
 
 
+.hit_button {
+  background-color: #178d17;
+  color: white;
+  display: flex;
+  align-items: center;
+}
 
+.hit_button:hover {
+  transform: scale(1.05);
 
+}
 
+.stand_button {
+  background-color: #178d17;
+  color: white;
+  display: flex;
+  align-items: center;
+}
+
+.stand_button:hover {
+  transform: scale(1.05);
+}
 
 .hide {
   display: none;
 }
 
 
+@media screen and (min-width: 1200px) {
+  .blackjack_game {
+    flex-direction: row;
+    margin-top: 0;
+    gap: 50px;
+  }
+
+  .both_sides_container {
+    flex: 60%;
+  }
+  .buttons_container {
+    flex: 40%;
+    justify-content: flex-start;
+    gap: 20px;
+  }
+}
