--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap')
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* font-family: "Rubik", sans-serif; */
+
+}
+
+body {
+  background-color: rgb(2, 85, 2);
+  text-align: center;
+  padding-top: 20px;
+}
+
+
+h2 {
+  font-size: 32px;
+}
